--- a/slides/chapter_1_02_RStudio_basics.Rmd
+++ b/slides/chapter_1_02_RStudio_basics.Rmd
@@ -1,18 +1,22 @@
 ---
-title: "RStudio basics"
+title: RStudio basics
 output:
-  revealjs::revealjs_presentation:
-     css: [reveal.css, slide.css]
-     transition: slide
-     keep_md: true
-     lib_dir: libs/
-     self_contained: false
+  teachr::teachr_slides
+type: slides
 ---
-
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(fig.path = "images/")
+knitr::opts_chunk$set(fig.path = "images/chapter1-02/",
+                      fig.align = "center",
+                      fig.width = 2, 
+                      fig.height = 2,
+                      cache.path = "cache/",
+                      cache = FALSE,
+                      echo = TRUE)
+
 library(icons)
 ```
+
+
 
 ## What does RStudo looks like? 
 
