updating ch6 to ch5; adding yaml syntax chapter :  to both ch2 and now ch5.

--- a/slides/chapter2_03_vectors.Rmd
+++ b/slides/chapter2_03_vectors.Rmd
@@ -12,6 +12,7 @@ output:
      #   before_body: header.html
      #incremental: true
 type: slides
+chapter: 2
 ---
 
 ```{r setup, include = FALSE}
