--- a/slides/chapter5_02_dplyr.Rmd
+++ b/slides/chapter5_02_dplyr.Rmd
@@ -12,6 +12,7 @@ output:
      #   before_body: header.html
      #incremental: true
 type: slides
+chapter: 5
 ---
 ```{r setup, include = FALSE}
 library(tidyverse)
