--- a/slides/chapter1_01_Install.Rmd
+++ b/slides/chapter1_01_Install.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(fig.path = "images/chapter1-01/",
 
 ```
 
-## Why do we want to learn and use R and RStudio?
+### Why do we want to learn and use R and RStudio?
 
 * R and RStudio are powerful tools for statistical analysis
 
@@ -30,114 +30,130 @@ knitr::opts_chunk$set(fig.path = "images/chapter1-01/",
 
 ---
 
-## What is R and RStudio?
+### What is R and RStudio?
 
-R is a free software environment for statistical computing and graphics. RStudio is an integrated development environment (IDE) for R. Before you download and install RStudio, you must first downloaded and install R. One way to think about the relationship between R and RStudio is that R acts like the CPU of a computer where RStudio acts like your computer which provides easy-to-work-with interface. 
+R is a free software environment for statistical computing and graphics. RStudio is an integrated development environment (IDE) for R. Before you download and install RStudio, you must first downloaded and install R. 
+
 
 ---
 
-## Download and Install R 
+### What is R and RStudio?
 
-Download the latest version of R from: [The Comprehensive R Archive Network (CRAN)](https://cloud.r-project.org/). 
+One way to think about the relationship between R and RStudio is that R acts like the CPU of a computer where RStudio acts like your computer which provides easy-to-work-with interface. 
 
-Please select Download R for `your operating system`
+---
 
-```{r, echo=FALSE, out.width="50%"}
+### Download and Install R 
+
+
+```{r, echo=FALSE, out.width="80%"}
 knitr::include_graphics("images/chapter1-01/R_Install_CRAN.png")
 ```
 
+Note: Download the latest version of R from: [The Comprehensive R Archive Network (CRAN)](https://cloud.r-project.org/).
+
+Please select Download R for `your operating system`
+
 ---
 
-## macOS users 
+### macOS users 
 
-You should see this webpage once you click on `Download R for macOS`.  
-
-```{r, echo=FALSE, out.width="50%"}
+```{r, echo=FALSE, out.width="80%"}
 knitr::include_graphics("images/chapter1-01/R_Install_Mac.png")
 ```
 
   
+Note: You should see this webpage once you click on `Download R for macOS`.  
+
 Click on `R-4.1.2.pkg` to start the download. (The top one will always be the most recent version. During the first development of this short course, 4.1.2 is the latest version of R.)
 
 
 ---
 
-## macOS users 
+### macOS users 
 
-After finishing the download of `R-4.1.2.pkg`, double click on it, you should see the message below. 
-
-```{r, echo=FALSE, out.width="50%"}
+```{r, echo=FALSE, out.width="80%"}
 knitr::include_graphics("images/chapter1-01/R_Install_Mac_1.png")
 ```
+
+Note: After finishing the download of `R-4.1.2.pkg`, double click on it, you should see the message below.
 
 Click `Continue`. 
 
 ---
 
-## macOS users 
+### macOS users 
 
-Read through the important information about R. 
 
-```{r, echo=FALSE, out.width="50%"}
+
+```{r, echo=FALSE, out.width="80%"}
 knitr::include_graphics("images/chapter1-01/R_Install_Mac_2.png")
 ```
 
+Note: Read through the important information about R. 
+
 Click `Continue`.
 
 ---
 
-## macOS users 
+### macOS users 
 
-Read through the software licence agreement about R. 
 
-```{r, echo=FALSE, out.width="50%"}
+```{r, echo=FALSE, out.width="80%"}
 knitr::include_graphics("images/chapter1-01/R_Install_Mac_3.png")
 ```
 
+Note: Read through the software licence agreement about R. 
+
 Click `Continue`.
 
 ---
 
-## macOS users 
+### macOS users 
 
-The default installation location for macOS is the `Macintosh HD`. If you want to change the install location, click `Change Install Location`. Otherwise, click `Install`.
 
-```{r, echo=FALSE, out.width="50%"}
+```{r, echo=FALSE, out.width="80%"}
 knitr::include_graphics("images/chapter1-01/R_Install_Mac_4.png")
 ```
 
+Note: The default installation location for macOS is the `Macintosh HD`.
+
+If you want to change the install location, click `Change Install Location`. Otherwise, click `Install`.
 
 ---
 
-## macOS users 
+### macOS users 
 
-Once you successfully installed R. You can click `Close` to exit the installation process. 
-
-```{r, echo=FALSE, out.width="50%"}
+```{r, echo=FALSE, out.width="80%"}
 knitr::include_graphics("images/chapter1-01/R_Install_Mac_5.png")
 ```
 
+Note: Once you successfully installed R. You can click `Close` to exit the installation process. 
+
 ---
 
-## Install RStudio 
+### Install RStudio 
 
-Download the latest version of RStudio from [RStudio](https://www.rstudio.com/products/rstudio/download/). 
 
-Scroll down to `All Installers` and download the RStudio version for your operating system. 
-
-```{r, echo=FALSE, out.width="50%"}
+```{r, echo=FALSE, out.width="80%"}
 knitr::include_graphics("images/chapter1-01/RStudio_Install.png")
 ```
 
+Note: Download the latest version of RStudio from [RStudio](https://www.rstudio.com/products/rstudio/download/). 
+
+Scroll down to `All Installers` and download the RStudio version for your operating system. 
+
 ---
 
-## macOS users 
+### macOS users 
 
-Drag RStudio.app into the `Applications` folder. 
 
-```{r, echo=FALSE, out.width="50%"}
+
+```{r, echo=FALSE, out.width="80%"}
 knitr::include_graphics("images/chapter1-01/RStudio_Install_Mac_1.png")
 ```
+
+Note: Drag RStudio.app into the `Applications` folder.
 
 After this step, you should have RStudio ready to explore!  
 
