update images for slide 6-2

--- a/slides/chapter6_02_ggplot2intro.qmd
+++ b/slides/chapter6_02_ggplot2intro.qmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(#fig.path = "chapter7-02/",
                       fig.width = 6, 
                       fig.height = 4,
                       cache.path = "cache/",
-                      cache = TRUE,
+                      cache = FALSE,
                       echo = TRUE,
                       message = FALSE, 
                       warning = FALSE)
