--- a/slides/chapter6_04_ggplot2layers.qmd
+++ b/slides/chapter6_04_ggplot2layers.qmd
@@ -4,7 +4,7 @@ format: revealjs
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(fig.path = "images/chapter7-04/",
+knitr::opts_chunk$set(#fig.path = "images/chapter6-04/",
                       fig.align = "center",
                       fig.width = 4, 
                       fig.height = 4,
@@ -15,7 +15,7 @@ library(ggplot2)
 
 ## Layer
 
-* A layer is usually added using functions with prefix `geom_` and `stat_`
+
 * A layer is comprised of:
    - `data` 
    - `mapping` 
@@ -24,15 +24,32 @@ library(ggplot2)
    - position adjustment (`position`)
 * `data` and `mapping` are often inherited from `ggplot`
 
+Notes: 
 
+* A layer is usually added using functions with prefix `geom_` and `stat_`
+* Technically, there are more components but we won't go into those. 
 
-## The boxplot layer
+---
+
+## The violin plot layer
 
 ```{r plot1-cut}
 ggplot(data = diamonds,
        mapping = aes(x = cut, y = price)) +
-  geom_boxplot()
+  geom_violin()
 ```
+
+
+Notes: 
+
+* There is one layer in this plot comprising of:
+  * inherited `data`: `diamonds`
+  * inherited `mapping`: `aes(x = cut, y = price)`
+  * `geom`: violin
+  * `stat`: density for the y-axis (`ydensity`)
+  * `position`: dodge
+  
+* You don't see `position = "dodge"` much in action here because there is only one group for each level of x.
 
 ---
 
@@ -45,6 +62,10 @@ ggplot(data = diamonds,
   geom_boxplot(width = 0.1)
 ```
 
+Notes: 
+
+* We now have the boxplot layer on top of the violin plot layer.
+
 ---
 
 ## The order of the layer matters
@@ -56,13 +77,19 @@ ggplot(data = diamonds,
   geom_violin()
 ```
 
+Notes:
+
+* You can't see the boxplot here because it's been hidden by the violin plot.
+
 ---
 
 ## Inheriting data and mapping
 
 * A layer inherits the data and mapping from the initialised ggplot object by default 
 
-![](images/ggplot-multiple-layers.png)
+<center>
+<img src= "images/ggplot-multiple-layers.png" width="70%">
+</center>
 
 ---
 
@@ -74,48 +101,54 @@ ggplot(data = diamonds,
 
 ---
 
+## Overwriting data and aesthetic
 
-
-```{r plot2-inheritance, fig.width = 8}
-ggplot(data = diamonds) +
-  geom_violin(aes(x = cut, y = price, color = cut)) + 
-  geom_boxplot(aes(x = cut, y = price),
-               width = 0.1)
+```{r plot2-inheritance, fig.width = 8, fig.height = 3, message = FALSE}
+library(dplyr) # needed for data wrangling
+ggplot(data = diamonds, aes(x = cut, y = price)) +
+  geom_violin(aes(fill = cut)) + 
+  geom_boxplot(width = 0.1) +
+  geom_text(data = function(data) data %>% 
+              group_by(cut) %>% 
+              tally(),
+            aes(y = 0, label = n), nudge_y = -0.2)
 ```
+
+Notes: 
+
+* You can see that `fill` is only applied the violin plot. 
+* For text layer shows the the total number of observations on the bottom of the violin plot. This display requires a summarised data of the inherited data. 
+* The input `data` for each subsequent layer can be a `data.frame` or a function. If it's a function it's applied to the data that it inherited -- it's handy for cases like this where you want to use the summarised or processed form of the inherited data!
 
 ---
 
 ## Aesthetic or Attribute?
 
-::: columns
 
-::: {.column width="50%"}
-
-Not what you want:
+_Not_ what you want:
 
 ```{r aes-map}
 ggplot(diamonds, aes(carat, price)) +
-  geom_point(aes(color = "blue"))
+  geom_point(aes(color = "dodgerblue"))
 ```
 
+Notes: 
 
-:::
+* When you supply values within `aes`, it assumes that it's a data variable. 
+* The string `"dodgerblue"` gets converted into a variable with one level and it gets colored by `ggplot`'s default color palette.
 
-::: {.column width="50%"}
+---
 
-What you want:
+## When your input is an attribute
+
+
+Don't put attributes inside `aes()`!
 
 ```{r attr-map}
 ggplot(diamonds, aes(carat, price)) +
-  geom_point(color = "blue")
+  geom_point(color = "dodgerblue")
 ```
 
-
-
-:::
-
-
-:::
 
 ---
 
@@ -125,6 +158,51 @@ ggplot(diamonds, aes(carat, price)) +
 
 ```{r I-map}
 ggplot(diamonds, aes(carat, price)) +
-  geom_point(aes(color = I("blue")))
+  geom_point(aes(color = I("dodgerblue")))
 ```
 
+---
+
+## Attributes are for layers
+
+
+* Attributes should be defined in specific layers.
+
+```{r attr-in-ggplot}
+ggplot(diamonds, aes(carat, price),
+       color = "dodgerblue") +
+  geom_point()
+```
+
+Notes:
+
+* Notice how the points don't have the "dodgeblue" color.
+* Layers inherit data and the mapping from `ggplot()` but not attributes like this. 
+
+---
+
+## Annotation layer
+
+
+* `annotate()` allows you to add elements to plots without a `data.frame`
+
+```{r annotate, fig.width = 7, fig.height = 3}
+ggplot(diamonds, aes(color, fill = cut)) +
+  geom_bar(color = "black") + 
+  annotate("text", x = "I", y = 9000, 
+           label = paste(nrow(diamonds), "diamonds"))
+```
+
+Notes: 
+
+* `annotate()` is useful if you want to add small annotations to plot and it's too cumbersome for you to put the data as a `data.frame`
+
+---
+
+## Summary
+
+
+* We've seen how you can add multiple layers in `ggplot`.
+* You can define layer-specific data or mappings. 
+* An attribute of a graphical parameter must be placed outside of `aes()` in the correpsonding layer. 
+* You can add the annotation layer using `annotate()`.
