--- a/slides/chapter6_05_ggplot2scales.qmd
+++ b/slides/chapter6_05_ggplot2scales.qmd
@@ -11,7 +11,7 @@ format:
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(fig.path = "images/chapter7-04/",
+knitr::opts_chunk$set(#fig.path = "images/chapter6-04/",
                       fig.align = "center",
                       fig.width = 4, 
                       fig.height = 4,
@@ -26,14 +26,22 @@ library(patchwork)
 * They usually come in the format like below:
 
 <center>
-![](images/ggplot-scale.png)
+<img src="images/ggplot-scale.png">
 </center>
+
+* E.g. `scale_x_continuous()`, `scale_fill_discrete()`, `scale_y_log10()` and so on.
+
+
+Notes:
+
+For example:
 
 ```{r scale-demo}
 ggplot(diamonds, aes(carat, price)) +
   geom_point() + 
   scale_y_log10()
 ```
+
 
 ---
 
@@ -42,14 +50,16 @@ ggplot(diamonds, aes(carat, price)) +
 * The scale creates a **guide**: an **axis** or **legend**
 
 <center>
-![](images/guides-dissection.png)
+<img src="images/guides-dissection.png">
 </center>
 
-* So to modify these you generally use `scale_*` or other handy functions (e.g. `guides`, `labs`, `xlab`, `ylab`, and so on).
+Notes:
+
+* To modify these you generally use `scale_*` or other handy functions (e.g. `guides`, `labs`, `xlab`, `ylab`, and so on).
 
 ---
 
-## Example plot
+## Let's use this plot for modifying scales
 
 ```{r example, fig.width = 6, fig.height = 4}
 g <- ggplot(diamonds, aes(carat, price)) + geom_hex()
@@ -68,6 +78,12 @@ g +
   geom_hline(yintercept = 10000, color = "red", size = 2)
 ```
 
+Notes:
+
+* Notice how the axis title has been modified to "Price"
+* The breaks are at 0 and 10000
+* And the associated labels for the breaks are "0" and "More than 10K". The "\n" in label is for starting a new line. 
+
 ---
 
 ## Modifying labels
@@ -79,6 +95,12 @@ g +
     label = scales::dollar_format()
   )
 ```
+
+Notes: 
+
+* Sometimes you may want to modify the labels based on it's existing axis label. 
+* You can give a function to the label instead. 
+* Most of the handy functions are in the `scales` package.
 
 ---
 
@@ -92,6 +114,13 @@ g +
   )
 ```
 
+Notes:
+
+* An axis is not just the x-axis and y-axis!
+* The legend can have an axis and we can modify its scale as well.
+* Here we identify the legend scale is `fill` and it's using a continuous scale. 
+* We transform the scale into a `log10` format with breaks defined at 0, 10, 100, 1000, and 4000. 
+
 ---
 
 ## Removing legend
@@ -103,22 +132,30 @@ g +
   )
 ```
 
+Notes: 
+
+* If you want to remove a legend for an associated aesthetic, you can use `guide = "none"` in the associated scale.
+* There are other handy ways of doing this as well!
+
 ---
 
 ## Alternative control of guides
 
 * There are generally other ways of modifying the scales
-* Each user has a different mental mode, so you can use what suits you (and others in your team)
 
-```{r change-labels}
+```{r change-labels, eval = FALSE}
 g + 
   ylab("Price") + # Changes the y axis label
   labs(x = "Carat", # Changes the x axis label
        fill = "Count") # Changes the legend name
 ```
-```{r remove-legend-alt}
+```{r remove-legend-alt, eval = FALSE}
 g + guides(fill = "none") # remove the legend
 ```
+
+Notes: 
+
+* Each user has a different mental mode, so you can use what suits you (and others in your team)
 
 ---
 
@@ -126,7 +163,7 @@ g + guides(fill = "none") # remove the legend
 
 * When using color in your plots, it's good to keep in mind that color can be viewed differently by people 
 
-```{r, echo = FALSE, warning = FALSE, fig.width = 10, fig.height = 5}
+```{r, echo = FALSE, warning = FALSE, fig.width = 10, fig.height = 5, message = FALSE}
 cols <- c("dodgerblue3", "grey93", "darkorange4", "green3", "red3")
 g1 <- ggplot(diamonds, aes(carat, fill = cut)) +
   geom_density(alpha = 0.5) + 
@@ -144,3 +181,36 @@ g4 <- g1 + scale_fill_manual(values = colorspace::tritan(cols)) +
 (g1 + g2) / (g3 + g4)
 ```
 
+Notes: 
+
+* You can see how the plot in "Original" can be seen differently under different color deficient conditions (Protan, Deutan, Tritan).
+* If your goal is to use the plot for communicating, you may want to check how colorblind friendly your chosen palettes. 
+
+---
+
+## Color palettes
+
+
+* There are a few different color palettes... choose what suits your purpose!
+
+```{r}
+g + scale_fill_viridis_c(option = "A")
+```
+
+
+
+
+Notes:
+
+* The two primary ways to specify color in `ggplot` are through `fill` or `color` (or `colour`). 
+* For every `color` scale, there is generally a corresponding `fill` scale, e.g. `scale_color_brewer()` and `scale_fill_brewer()`. 
+
+---
+
+## Summary
+
+* Scales the control the mapping from data to aesthetics
+* Scales creates a **guide** that allows you to "read" the data from the plot. 
+* Scales are primarily modified using `scale_` functions. 
+* These include color (or fill).
+* There are many in-built color palettes that you can choose from but be wary to check how color blind friendly they are. 
