slides 6 chapter 6 section 10 done

--- a/slides/chapter6_06_ggplot2facet.qmd
+++ b/slides/chapter6_06_ggplot2facet.qmd
@@ -12,7 +12,7 @@ format:
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(fig.path = "images/chapter7-05/",
+knitr::opts_chunk$set(#fig.path = "images/chapter6-06/",
                       fig.align = "center",
                       fig.width = 10, 
                       fig.height = 4,
@@ -22,8 +22,6 @@ knitr::opts_chunk$set(fig.path = "images/chapter7-05/",
 ```
 
 
----
-
 ## Facets 
 
 * Faceting in `ggplot2` refers to partitioning of the plot region to multiple panels each showing a different subset of the data.
@@ -32,15 +30,21 @@ knitr::opts_chunk$set(fig.path = "images/chapter7-05/",
   * `facet_null()` (the default),
   * `facet_wrap()`, and
   * `facet_grid()`.
+  
+Notes: 
+
+* We don't really use `facet_null()` much.
 
 ---
 
-## Motivating data: growth of soybean
+## Illustrative data 🌱 growth of soybean
 
 ```{r}
 data(davidian.soybean, package = "agridat")
 str(davidian.soybean)
 ```
+
+Notes:
 
 * The data contains:
   * `plot`: the plot code
@@ -55,7 +59,7 @@ str(davidian.soybean)
 
 * `facet_wrap()` divides the data into mutually exclusive subset based on the input variable and create subplots based on the data in the corresponding panel.
 
-```{r facet-wrap-demo}
+```{r facet-wrap-demo, fig.height = 2}
 library(ggplot2)
 ggplot(davidian.soybean, aes(day, weight)) + 
   geom_point() +
@@ -66,7 +70,7 @@ ggplot(davidian.soybean, aes(day, weight)) +
 
 ## Wrapping many panels
 
-* It "wraps" the panels into 2d if you have many panels
+* `facet_wrap` "wraps" the panels into 2d if you have many panels
 
 ```{r facet-wrap-demo-wrap}
 ggplot(davidian.soybean, aes(day, weight)) + 
@@ -78,26 +82,34 @@ ggplot(davidian.soybean, aes(day, weight)) +
 
 ## Wrapping by a continuous variable
 
-* If you want to wrap the facet by a continuous variable, then you first need to discretize the continuous variable, e.g. using `cut()`, `cut_width()`, `cut_interval()` or `cut_number()`.
+* Discretize  continuous variable using `cut()`, `cut_width()`, `cut_interval()` or `cut_number()`.
 
-```{r facet-wrap-demo-cont}
+```{r facet-wrap-demo-cont, fig.height = 3}
 ggplot(davidian.soybean, aes(day, weight)) + 
   geom_point() +
   facet_wrap(~cut_number(day, 4))
 ```
 
+Notes: 
+
+* The cut functions categorize the continuous variable into discrete levels.
+
 ---
 
 ## Changing the scales for each panel
 
-* By default the scales are shared across the panels but you can choose to have scales  built independently for each panel:
+* By default the scales are shared across the panels but you can choose to have scales built independently for each panel:
 
-```{r facet-wrap-demo-cont-scales}
+```{r facet-wrap-demo-cont-scales, fig.height = 3}
 ggplot(davidian.soybean, aes(day, weight)) + 
   geom_point() +
   facet_wrap(~cut_number(day, 4), scales = "free")
 ```
 
+
+Note:
+
+* If you want the scale to be independent only in one dimension then you can use `scales = "free_x"` and `scales = "free_y"`.
 
 ---
 
@@ -105,12 +117,16 @@ ggplot(davidian.soybean, aes(day, weight)) +
 
 * If you want to wrap the facet by more than one variable, you can combine the variables by using `+`:
 
-```{r facet-wrap-demo-interaction}
+```{r facet-wrap-demo-interaction, fig.height = 3}
 ggplot(davidian.soybean, aes(day, weight)) + 
   geom_point() +
   facet_wrap(~ year + variety)
 ```
 
+
+Notes:
+
+* Alternatively, you can use `vars()` instead of `+`.
 
 ---
 
@@ -118,7 +134,7 @@ ggplot(davidian.soybean, aes(day, weight)) +
 
 * Alternatively, you can use `facet_grid()` to lay out the panels in a 2d grid:
 
-```{r facet-grid-demo}
+```{r facet-grid-demo, fig.height = 3}
 ggplot(davidian.soybean, aes(day, weight)) + 
   geom_point() +
   facet_grid(variety ~ year)
@@ -130,13 +146,17 @@ ggplot(davidian.soybean, aes(day, weight)) +
 
 * If a layer data is missing the faceting variable(s), then the layer will be shown across all panels based on all of the layer data
 
-```{r facet-all}
+```{r facet-all, fig.height = 2.5}
 ggplot(davidian.soybean, aes(day, weight)) + 
   geom_point(data = dplyr::select(davidian.soybean, -c(variety, year)),
              color = "grey70") +
   geom_point() +
   facet_grid(variety ~ year)
 ```
+
+Notes:
+
+* This is a nice way to creating a "shadow" across all panels.
 
 ---
 
@@ -148,6 +168,12 @@ ggplot(davidian.soybean, aes(day, weight)) +
 library(patchwork)
 ```
 * Combining multiple `ggplot` objects is then just a matter of using `+` (side-by-side) or `/` (top-to-bottom).
+
+
+---
+
+
+## Demo with `patchwork`
 
 ```{r patchwork-demo, fig.height = 3}
 g1 <- ggplot(davidian.soybean, aes(day, weight)) +
@@ -175,6 +201,9 @@ g1 + g2 +
 
 * You can combine the use of `+` and `/` to layout plots horizontally or vertically using `(` to group rows or columns
 
+
+
+
 ```{r patchwork-layout}
 (g1 + g2) / (g2 + g1) + 
   plot_layout(guides = "collect")
@@ -186,7 +215,7 @@ g1 + g2 +
 
 * If you want even more control over the plot layout, then you can specify a strinng with the structure you want like below:
 
-```{r patchwork-design}
+```{r patchwork-design, eval = FALSE}
 design <- "
  11###
  11###
@@ -197,3 +226,18 @@ g1 + g2 +
               design = design)
 ```
 
+Notes:
+
+* Notice the empty spots in this plot output.
+* How does it align the the `design`?
+
+```{r patchwork-design, echo = FALSE}
+```
+
+
+---
+
+## Summary
+
+* You can view multiple subplots for different partitions of the data using `facet_wrap()` or `facet_grid()`.
+* You can combine plots using `patchwork` package.
