--- a/slides/chapter6_06_ggplot2facet.Rmd
+++ b/slides/chapter6_06_ggplot2facet.Rmd
@@ -2,12 +2,7 @@
 title: Multiple layers in `ggplot2`
 output: 
   teachr::teachr_slides
-# need to run following from console to work
-# might be issue with render in RStudio daily build
-# rmarkdown::render("chapter7_06_ggplot2facet.Rmd")
-# Need to copy over the images as well
-# images/chapter7
-## fs::dir_copy("images/", "../static/chapter7/images/", overwrite = TRUE)
+chapter: 6
 ---
 
 
