--- a/slides/chapter6_07_ggplot2theme.Rmd
+++ b/slides/chapter6_07_ggplot2theme.Rmd
@@ -1,13 +1,8 @@
 ---
-title: Multiple layers in `ggplot2`
+title: Publication ready plots with `ggplot2`
 output: 
   teachr::teachr_slides
-# need to run following from console to work
-# might be issue with render in RStudio daily build
-# rmarkdown::render("chapter7_07_ggplot2theme.Rmd")
-# Need to copy over the images as well
-# images/chapter7
-## fs::dir_copy("images/", "../static/chapter7/images/", overwrite = TRUE)
+chapter: 6
 ---
 
 
