--- a/slides/chapter6_07_ggplot2theme.qmd
+++ b/slides/chapter6_07_ggplot2theme.qmd
@@ -12,7 +12,7 @@ format:
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(fig.path = "images/chapter7-06/",
+knitr::opts_chunk$set(#fig.path = "images/chapter7-06/",
                       fig.align = "center",
                       fig.width = 4, 
                       fig.height = 4,
@@ -27,13 +27,19 @@ library(ggplot2)
 ## `theme`: modify the *look* of texts
 
 
-![](images/ggplot-theme-text-annotation.png)
-
 <center>
+
+<img src="images/ggplot-theme-text-annotation.png" width = "80%">
+
 
 `element_text()`
 
 </center>
+
+Notes:
+
+* You can customise almost any aspect of `ggplot` object.
+* The customisation follows a certain consistent rule which makes it easier to remember how to customise the plot. 
 
 ---
 
@@ -41,9 +47,7 @@ library(ggplot2)
 
 * There are many text elements in a plot -- modify any part of it how you like it!
 
-::: {.columns}
 
-::: {.column width="70%"}
 
 ```{r ele-text, eval = F}
 ggplot(diamonds, aes(carat, price)) + 
@@ -64,25 +68,18 @@ ggplot(diamonds, aes(carat, price)) +
                                 ))
 ```
 
+Notes:
 
-:::
-
-::: {.column width="30%"}
 ```{r ele-text, echo = F, fig.width = 3.8, fig.height = 4.5}
 ```
-
-:::
-
-
-:::
 
 ---
 
 ## `theme`: modify the *look* of the lines
 
-![](images/ggplot-annotated-line-marks.png)
-
 <center>
+<img src="images/ggplot-annotated-line-marks.png" width="70%">
+
 `element_line()`
 </center>
 
@@ -91,9 +88,6 @@ ggplot(diamonds, aes(carat, price)) +
 ## `element_line()`
 
 
-::: {.columns}
-
-::: {.column width="70%"}
 
 ```{r ele-line, eval = F}
 ggplot(diamonds, aes(carat, price)) + 
@@ -115,16 +109,11 @@ ggplot(diamonds, aes(carat, price)) +
 ```
 
 
-:::
+Notes:
 
-::: {.column width="30%"}
 ```{r ele-line, echo = F, fig.width = 3.8, fig.height = 4.5}
 ```
 
-:::
-
-
-:::
 
 * If there's a line in the plot that's not data related, then it's generally controlled in the `theme` with `element_line()`. 
 
@@ -134,7 +123,7 @@ ggplot(diamonds, aes(carat, price)) +
 ## `theme`: modify the *look* of the <br>rectangular regions
 
 <center>
-<img src="images/ggplot-annotated-rect-marks.png" width = "60%">
+<img src="images/ggplot-annotated-rect-marks.png" width = "40%">
 
 
 `element_rect()`
@@ -145,9 +134,6 @@ ggplot(diamonds, aes(carat, price)) +
 
 ## `element_rect()`
 
-::: {.columns}
-
-::: {.column width="70%"}
 
 ```{r ele-rect, eval = F}
 ggplot(diamonds, aes(carat, price)) + 
@@ -170,16 +156,10 @@ ggplot(diamonds, aes(carat, price)) +
 ```
 
 
-:::
+Notes:
 
-::: {.column width="30%"}
 ```{r ele-rect, echo = F, fig.width = 3.8, fig.height = 4.5}
 ```
-
-:::
-
-
-:::
 
 * The selected colors don't make it a pretty plot but it's easier to distinguish between the different rectangular elements
 
@@ -191,3 +171,5 @@ ggplot(diamonds, aes(carat, price)) +
 * You can make very pretty plots using `ggplot`.
 * Using code to draw plots has an advantage over making plots and editing the plot manually, e.g. using Adobe Illustrator -- your plots are easily reproducible!
 * Imagine that after you manually edit a plot, the data was updated -- you'll have to redo your manual task from scratch again!
+
+
